changed how the setScene command locates its constructor- like before only default (empty) constructors may be used